# GC-Lab4-Shaders

./: CMakeLists.txt  README.md  fragment.h  framebuffer.h  main.cpp  shaders.h  texture.h  triangle.h
